--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
-<h1>Hello</h1>
+<h1>Save the picture and add me as a friend from WeChat</h1>
+<h1>保存图片，从微信添加我为好友</h1>
 
-<h1>你好</h1>
+<img src="/wxqr.png"/>
